Update About Us Page

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,15 @@ select {
   width: 100%;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+
 .scroll-container {
   display: flex;
   overflow-x: auto;
